Fixed .gitignore + Java 20 fix